...
                            <rect key="frame" x="-2" y="0.0" width="303" height="28"/>
                            <textFieldCell key="cell" title="What have you done the last {DURATION} (since {TIME})?" id="MHs-V5-IyC">
                                <font key="font" metaFont="label" size="11"/>
                                <color key="textColor" name="labelColor" catalog="System" colorSpace="catalog"/>
                                <color key="backgroundColor" name="textBackgroundColor" catalog="System" colorSpace="catalog"/>
                            </textFieldCell>
                            <accessibility identifier="durationheader"/>
                        </textField>
                        <customView verticalCompressionResistancePriority="1" translatesAutoresizingMaskIntoConstraints="NO" id="maZ-n4-VKP" userLabel="Spacer">
                            <rect key="frame" x="305" y="4" width="50" height="24"/>
                        </customView>
                        <customView translatesAutoresizingMaskIntoConstraints="NO" id="HC6-YQ-v0e" userLabel="Snooze buttonopts">
                            <rect key="frame" x="361" y="14" width="130" height="14"/>
                            <subviews>
                                <button identifier="snoozebutton" verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="yjZ-yA-5CH" userLabel="Snooze button">
                                    <rect key="frame" x="0.0" y="-1" width="130" height="15"/>
                                    <constraints>
                                        <constraint firstAttribute="width" constant="130" id="kfD-55-owX"/>
                                    </constraints>
                                    <buttonCell key="cell" type="roundRect" title="snooze" bezelStyle="roundedRect" alignment="left" controlSize="mini" borderStyle="border" imageScaling="proportionallyDown" inset="2" id="Ojt-yE-tly">
                                        <behavior key="behavior" pushIn="YES" lightByBackground="YES" lightByGray="YES"/>
                                        <font key="font" metaFont="menu" size="9"/>
                                    </buttonCell>
                                    <connections>
                                        <action selector="snoozeButtonPressed:" target="-2" id="GfF-m3-O9M"/>
                                    </connections>
                                </button>
                                <popUpButton identifier="snoozeopts" translatesAutoresizingMaskIntoConstraints="NO" id="2d3-tf-ady" userLabel="Snooze options">
                                    <rect key="frame" x="113" y="0.0" width="17" height="14"/>
                                    <constraints>
                                        <constraint firstAttribute="width" secondItem="2d3-tf-ady" secondAttribute="height" multiplier="1.25:1" id="B6H-b1-avb"/>
                                    </constraints>
                                    <popUpButtonCell key="cell" type="square" bezelStyle="shadowlessSquare" alignment="center" lineBreakMode="truncatingTail" state="on" borderStyle="border" imageScaling="proportionallyDown" inset="2" pullsDown="YES" arrowPosition="arrowAtCenter" id="XN4-G0-EmL">
                                        <behavior key="behavior" pushIn="YES" lightByBackground="YES" lightByGray="YES"/>
...
                        </button>
                        <button verticalHuggingPriority="750" horizontalCompressionResistancePriority="150" verticalCompressionResistancePriority="150" translatesAutoresizingMaskIntoConstraints="NO" id="tkS-gq-Cbs" userLabel="Prefs Button">
                            <rect key="frame" x="520" y="14" width="14" height="14"/>
                            <constraints>
                                <constraint firstAttribute="width" secondItem="tkS-gq-Cbs" secondAttribute="height" multiplier="1:1" id="8lS-9s-VYO"/>
                            </constraints>
                            <buttonCell key="cell" type="smallSquare" title="Preferences" bezelStyle="smallSquare" image="NSAdvanced" imagePosition="only" alignment="center" lineBreakMode="truncatingTail" state="on" imageScaling="proportionallyUpOrDown" inset="2" id="69E-e8-wPO">
                                <behavior key="behavior" pushIn="YES" lightByBackground="YES" lightByGray="YES"/>
                                <font key="font" metaFont="system"/>
                            </buttonCell>
                            <accessibility description="Preferences"/>
                            <connections>
                                <action selector="preferenceButtonPressed:" target="-2" id="8XC-SQ-bNP"/>
...
