...
                    <subviews>
                        <stackView distribution="fill" orientation="horizontal" alignment="top" spacing="0.0" horizontalStackHuggingPriority="249.99998474121094" verticalStackHuggingPriority="249.99998474121094" detachesHiddenViews="YES" translatesAutoresizingMaskIntoConstraints="NO" id="HiW-d6-AUq" userLabel="Tab Buttons">
                            <rect key="frame" x="0.0" y="195" width="550" height="38"/>
                            <subviews>
                                <button horizontalHuggingPriority="750" verticalHuggingPriority="750" imageHugsTitle="YES" translatesAutoresizingMaskIntoConstraints="NO" id="kyk-QN-AE9">
                                    <rect key="frame" x="0.0" y="0.0" width="96" height="38"/>
                                    <buttonCell key="cell" type="square" title="General" bezelStyle="shadowlessSquare" image="NSAdvanced" imagePosition="leading" alignment="center" lineBreakMode="truncatingTail" state="on" borderStyle="border" imageScaling="proportionallyDown" inset="2" id="Tbm-ds-WlL">
                                        <behavior key="behavior" pushIn="YES" lightByBackground="YES" lightByGray="YES" changeBackground="YES" changeGray="YES"/>
                                        <font key="font" metaFont="system"/>
                                    </buttonCell>
                                </button>
                                <button horizontalHuggingPriority="750" verticalHuggingPriority="750" imageHugsTitle="YES" translatesAutoresizingMaskIntoConstraints="NO" id="b2F-m0-aIW">
                                    <rect key="frame" x="96" y="0.0" width="95" height="38"/>
...
                                                                    <textFieldCell key="cell" scrollable="YES" lineBreakMode="clipping" selectable="YES" editable="YES" sendsActionOnEndEditing="YES" state="on" borderStyle="bezel" alignment="right" drawsBackground="YES" usesSingleLineMode="YES" id="F9p-eX-zQP">
                                                                        <numberFormatter key="formatter" formatterBehavior="default10_4" numberStyle="decimal" formatWidth="-1" minimumIntegerDigits="1" maximumIntegerDigits="2000000000" maximumFractionDigits="3" id="5eD-n6-YjR"/>
                                                                        <font key="font" metaFont="system"/>
                                                                        <color key="textColor" name="controlTextColor" catalog="System" colorSpace="catalog"/>
                                                                        <color key="backgroundColor" name="textBackgroundColor" catalog="System" colorSpace="catalog"/>
                                                                    </textFieldCell>
                                                                    <accessibility description="frequency"/>
                                                                    <connections>
                                                                        <binding destination="-2" name="value" keyPath="self.ptnFrequencyMinutes" id="Hbd-ae-wRT">
                                                                            <dictionary key="options">
                                                                                <bool key="NSRaisesForNotApplicableKeys" value="NO"/>
                                                                            </dictionary>
                                                                        </binding>
...
                                                                    <textFieldCell key="cell" scrollable="YES" lineBreakMode="clipping" selectable="YES" editable="YES" sendsActionOnEndEditing="YES" state="on" borderStyle="bezel" alignment="right" drawsBackground="YES" id="Q5O-Pl-FQs">
                                                                        <numberFormatter key="formatter" formatterBehavior="default10_4" numberStyle="decimal" formatWidth="-1" minimumIntegerDigits="1" maximumIntegerDigits="2000000000" maximumFractionDigits="3" id="O4S-5f-smy"/>
                                                                        <font key="font" metaFont="system"/>
                                                                        <color key="textColor" name="controlTextColor" catalog="System" colorSpace="catalog"/>
                                                                        <color key="backgroundColor" name="textBackgroundColor" catalog="System" colorSpace="catalog"/>
                                                                    </textFieldCell>
                                                                    <accessibility description="frequency randomness"/>
                                                                    <connections>
                                                                        <binding destination="-2" name="value" keyPath="self.ptnFrequencyJitterMinutes" id="DyI-90-wqe">
                                                                            <dictionary key="options">
                                                                                <bool key="NSAllowsEditingMultipleValuesSelection" value="NO"/>
                                                                            </dictionary>
                                                                        </binding>
...
